--- a/index.html
+++ b/index.html
@@ -75,14 +75,13 @@
         <img class="lilo-main" src="https://i.ibb.co/NYpd7vk/Main-Screen-Player.png" alt="">
 
         <section class="main-selection">
-            <!-- <button id="eat">Eat</button>
-            <button id="sleepiness">Sleep</button> -->
             <p id="continueMessage"></p>
             <button class="play">Play</button>
         </section>
     </main>
 
     <main id='playScreen' class='hidden'>
+        <div class='title'>Play Screen</div>
 
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
@@ -107,6 +106,7 @@
             height=200>
 
         <section class="feed-selection">
+            <p id="naniMessage"></p>
             <button class="lunch">Lunch</button>
             <button class="feed-pudge">Feed Pudge</button>
 
@@ -116,6 +116,7 @@
 
 
     <main id='lunchScreen' class='hidden'>
+        <div class='title'>Lunch Screen</div>
 
 
         <ul class="healthmeter">
@@ -147,6 +148,7 @@
 
 
     <main id='sleepScreen' class='hidden'>
+        <div class='title'>Sleep Screen</div>
 
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
@@ -167,23 +169,22 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img src="https://gifmaker.me/PlayFrameAnimation.php?folder=2021042310Rmb1mvKKl3DF4B6yHOxLZf&music=https://www.youtube.com/watch?v=yb1m04zid8k&start=8"
-            alt="lilo-sleeping">
+        <img src="./imgs/output_LPKBv3.gif" alt="lilo-sleeping">
 
         <section></section>
-        <button class="home">Main</button>
+        <button class="home">Play</button>
 
 
     </main>
 
     <main id='deathScreen' class='hidden'>
         <img class="waves" src="https://i.ibb.co/PjS9SBh/waves.gif" alt="waves-gif">
-
+        <!-- <audio id="waves-music" controls hidden>
+            <source src="./imgs/Nice Ocean Waves.mp3" type="audio/mp3">
+        </audio> -->
     </main>
 
-    <!-- <audio id="lilo" controls hidden>
-        <source src="" type="audio/wav">
-    </audio> -->
+
 
 </body>
 
