--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Original+Surfer&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="./scripts/app.js" defer></script>
@@ -18,7 +18,6 @@
 
     <main id='openingScreen'>
         <div class='title'>Welcome to Lilogotchi! Give your egg a name to get started!</div>
-
 
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
@@ -39,14 +38,15 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img class="pixelegg" src="https://i.ibb.co/zZD9GKX/pixel-egg.png" alt="pixelegg" width=200>
+        <img class="pixelegg" src="https://cdn.dribbble.com/users/205519/screenshots/3399412/goodeggpixels.gif"
+            alt="pixelegg" width=200>
 
 
         <form class="form">
             <input id="name" type="text"><input id="submit" type="submit">
         </form>
 
-        </section>
+
 
     </main>
 
@@ -72,7 +72,7 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img class="lilo-main" src="https://i.ibb.co/NYpd7vk/Main-Screen-Player.png" alt="">
+        <img class="lilo-main" src="./imgs/lilo-talking.gif" alt="lilo-gif">
 
         <section class="main-selection">
             <p id="continueMessage"></p>
@@ -109,7 +109,6 @@
             <p id="naniMessage"></p>
             <button class="lunch">Lunch</button>
             <button class="feed-pudge">Feed Pudge</button>
-
         </section>
 
     </main>
@@ -138,7 +137,7 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img src="https://i.ibb.co/p2BGNQr/Lunch-screen-pixel.png" alt="lilo-eating" width=250>
+        <img class="lilo-sass" src="./imgs/lilo-sass.gif">
 
         <section class="lunch-selection">
             <p id="lunchMessage"></p>
@@ -152,36 +151,32 @@
 
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
-                <meter class="hunger" min="0" max="10" low="33" high="66" optimum="80" value="5">
-                    at 5/10
+                <meter class="hunger" min="0" max="20">
                 </meter>
             </li>
             <li><label for="sleepiness">Sleepiness:</label>
-                <meter class="sleepiness" min="0" max="10" low="33" high="66" optimum="80" value="7">
-                    at 7/10
+                <meter class="sleepiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="happiness">Happiness:</label>
-                <meter class="happiness" min="0" max="10" low="33" high="66" optimum="80" value="3">
-                    at 3/10
+                <meter class="happiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img src="./imgs/output_LPKBv3.gif" alt="lilo-sleeping">
+        <img src="./imgs/mood.gif" alt="liloisamood">
 
         <section></section>
-        <button class="home">Play</button>
+        <button class="home">Reset</button>
 
 
     </main>
 
     <main id='deathScreen' class='hidden'>
-        <img class="waves" src="https://i.ibb.co/PjS9SBh/waves.gif" alt="waves-gif">
-        <!-- <audio id="waves-music" controls hidden>
-            <source src="./imgs/Nice Ocean Waves.mp3" type="audio/mp3">
-        </audio> -->
+        <img class="rick" src="https://i.ibb.co/qyV9Fdb/rick-roll-gif.gif" alt="rickroll-gif">
+        <button class="home">Play Again</button>
+
     </main>
 
 
