--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="./scripts/app.js" defer></script>
-    <title>Lilogotchi</title>
+    <title>Stitchgotchi</title>
 </head>
 
 <body>
 
     <main id='openingScreen'>
-        <div class='title'>Welcome to Lilogotchi! Give your egg a name to get started!</div>
+        <div class='title'>Welcome to Stitchgotchi! Give your egg a name to get started!</div>
 
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
@@ -72,7 +72,10 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img class="lilo-main" src="./imgs/lilo-talking.gif" alt="lilo-gif">
+        <img class="stitch-main" src="https://i.pinimg.com/originals/2c/86/7c/2c867c5b913336a0ff1ab38c9bf3e27a.gif"
+            alt="stitch-gif">
+        <!-- <img class="stitch-main" src="https://i.pinimg.com/originals/5d/0a/ae/5d0aaee533b8d88de27050921dd8c66f.gif"
+            alt="stitch-gif"> -->
 
         <section class="main-selection">
             <p id="continueMessage"></p>
@@ -102,8 +105,8 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img id="lilo-swimming" src="https://i.ibb.co/SfG1DTn/Lilo-swimming-away.gif" alt="lilo-swimming-away"
-            height=200>
+        <img id="stitch-bikini" src="https://i.pinimg.com/originals/1e/a1/98/1ea19865675dce040cdd596a6bd09025.gif"
+            alt="stitch-bikini" height=200>
 
         <section class="feed-selection">
             <p id="naniMessage"></p>
@@ -137,7 +140,7 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img class="lilo-sass" src="./imgs/lilo-sass.gif">
+        <img class="stitch-eating" src="https://i.gifer.com/4zb0.gif">
 
         <section class="lunch-selection">
             <p id="lunchMessage"></p>
@@ -165,7 +168,8 @@
             <li><label for="age">Age: 1</label></li>
         </ul>
 
-        <img src="./imgs/mood.gif" alt="liloisamood">
+        <img class="stitch-sleeping" src="https://i.pinimg.com/originals/b6/e9/97/b6e997fdce033838378b3bc7369b63df.gif"
+            alt="stitch-sleeping" height=200>
 
         <section></section>
         <button class="home">Reset</button>
@@ -175,7 +179,7 @@
 
     <main id='deathScreen' class='hidden'>
         <img class="rick" src="https://i.ibb.co/qyV9Fdb/rick-roll-gif.gif" alt="rickroll-gif">
-        <button class="home">Play Again</button>
+        <button class="home">Start Over</button>
 
     </main>
 
