fixed meter and imgs in html

--- a/index.html
+++ b/index.html
@@ -21,18 +21,15 @@
 
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
-                <meter class="hunger" min="0" max="10" low="33" high="66" optimum="80" value="10">
-                    at 10/10
+                <meter class="hunger" min="0" max="20">
                 </meter>
             </li>
             <li><label for="sleepiness">Sleepiness:</label>
-                <meter class="sleepiness" min="0" max="10" low="33" high="66" optimum="80" value="10">
-                    at 10/10
+                <meter class="sleepiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="happiness">Happiness:</label>
-                <meter class="happiness" min="0" max="10" low="33" high="66" optimum="80" value="10">
-                    at 10/10
+                <meter class="happiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="age">Age: 1</label></li>
@@ -41,13 +38,9 @@
         <img class="pixelegg" src="https://cdn.dribbble.com/users/205519/screenshots/3399412/goodeggpixels.gif"
             alt="pixelegg" width=200>
 
-
         <form class="form">
             <input id="name" type="text"><input id="submit" type="submit">
         </form>
-
-
-
     </main>
 
     <main id='mainScreen' class='hidden'>
@@ -55,18 +48,15 @@
         <div class='title'>Main Screen</div>
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
-                <meter class="hunger" min="0" max="10" low="33" high="66" optimum="80" value="4">
-                    at 4/10
+                <meter class="hunger" min="0" max="20">
                 </meter>
             </li>
             <li><label for="sleepiness">Sleepiness:</label>
-                <meter class="sleepiness" min="0" max="10" low="33" high="66" optimum="80" value="5">
-                    at 5/10
+                <meter class="sleepiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="happiness">Happiness:</label>
-                <meter class="happiness" min="0" max="10" low="33" high="66" optimum="80" value="2">
-                    at 2/10
+                <meter class="happiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="age">Age: 1</label></li>
@@ -74,8 +64,6 @@
 
         <img class="stitch-main" src="https://i.pinimg.com/originals/2c/86/7c/2c867c5b913336a0ff1ab38c9bf3e27a.gif"
             alt="stitch-gif">
-        <!-- <img class="stitch-main" src="https://i.pinimg.com/originals/5d/0a/ae/5d0aaee533b8d88de27050921dd8c66f.gif"
-            alt="stitch-gif"> -->
 
         <section class="main-selection">
             <p id="continueMessage"></p>
@@ -88,18 +76,15 @@
 
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
-                <meter class="hunger" min="0" max="10" low="33" high="66" optimum="80" value="5">
-                    at 5/10
+                <meter class="hunger" min="0" max="20">
                 </meter>
             </li>
             <li><label for="sleepiness">Sleepiness:</label>
-                <meter class="sleepiness" min="0" max="10" low="33" high="66" optimum="80" value="7">
-                    at 7/10
+                <meter class="sleepiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="happiness">Happiness:</label>
-                <meter class="happiness" min="0" max="10" low="33" high="66" optimum="80" value="3">
-                    at 3/10
+                <meter class="happiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="age">Age: 1</label></li>
@@ -113,28 +98,22 @@
             <button class="lunch">Lunch</button>
             <button class="feed-pudge">Feed Pudge</button>
         </section>
-
     </main>
-
 
     <main id='lunchScreen' class='hidden'>
         <div class='title'>Lunch Screen</div>
 
-
         <ul class="healthmeter">
             <li><label for="hunger">Hunger:</label>
-                <meter class="hunger" min="0" max="10" low="33" high="66" optimum="80" value="5">
-                    at 5/10
+                <meter class="hunger" min="0" max="20">
                 </meter>
             </li>
             <li><label for="sleepiness">Sleepiness:</label>
-                <meter class="sleepiness" min="0" max="10" low="33" high="66" optimum="80" value="7">
-                    at 7/10
+                <meter class="sleepiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="happiness">Happiness:</label>
-                <meter class="happiness" min="0" max="10" low="33" high="66" optimum="80" value="3">
-                    at 3/10
+                <meter class="happiness" min="0" max="20">
                 </meter>
             </li>
             <li><label for="age">Age: 1</label></li>
@@ -147,7 +126,6 @@
             <button class="sleepiness">Sleep</button>
         </section>
     </main>
-
 
     <main id='sleepScreen' class='hidden'>
         <div class='title'>Sleep Screen</div>
@@ -171,18 +149,15 @@
         <img class="stitch-sleeping" src="https://i.pinimg.com/originals/b6/e9/97/b6e997fdce033838378b3bc7369b63df.gif"
             alt="stitch-sleeping" height=200>
 
-        <section></section>
-        <button class="home">Reset</button>
-
-
+        <section class="reset-button">
+            <button class="home">Reset</button>
+        </section>
     </main>
 
     <main id='deathScreen' class='hidden'>
         <img class="rick" src="https://i.ibb.co/qyV9Fdb/rick-roll-gif.gif" alt="rickroll-gif">
         <button class="home">Start Over</button>
-
     </main>
-
 
 
 </body>
